Trying my luck with github actions

--- a/.github/workflows/launchhelp.yml
+++ b/.github/workflows/launchhelp.yml
@@ -9,12 +9,20 @@ jobs:
   push:
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v1
+    - name: Install perl
+      run: |
+        apt-get install -qq -yy perl
     - name: Launch script with --help
       run: |
         ./check_smart.pl --help
   pull_request:
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v1
+    - name: Install perl
+      run: |
+        apt-get install -qq -yy perl
     - name: Launch script with --help
       run: |
         ./check_smart.pl --help
