Update Icinga2 check_smart CheckCommand definition

--- a/contrib/icinga2-command.conf
+++ b/contrib/icinga2-command.conf
@@ -4,8 +4,8 @@
 */
 
 object CheckCommand "check_smart" {
+	import "plugin-check-command"
 	command = [ PluginContribDir + "/check_smart.pl" ]
-
 	arguments = {
 		"-d" = {
 			value = "$smart_device$"
@@ -79,7 +79,6 @@ object CheckCommand "check_smart" {
 			description = "If set to true, skip check of SMART Error Log (not recommended)."
 		}
 	}
-
 	vars.smart_interface = "auto"
 	vars.smart_device_is_glob = false
 	vars.smart_selftest = false
