--- a/contrib/icinga2-command.conf
+++ b/contrib/icinga2-command.conf
@@ -5,7 +5,7 @@
 
 object CheckCommand "check_smart" {
 	import "plugin-check-command"
-	command = [ PluginContribDir + "/check_smart.pl" ]
+	command = [ "/usr/sbin/sudo", PluginContribDir + "/check_smart.pl" ]
 	arguments = {
 		"-d" = {
 			value = "$smart_device$"
